Jobs Scraper and Dataset creator

--- a/SHA571.ipynb
+++ b/SHA571.ipynb
@@ -1702,7 +1702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skills.to_csv(r'G:\\My Drive\\Desktop\\PGP-Data Science\\eCornell\\SHA571\\DS_Skills.csv', index = False)"
+    "skills.to_csv(f'{directory}\\{tag}_Skills.csv', index = False)"
    ]
   },
   {
